Started working on completely rewriting for 1.0.0 for 1.19.4